# embedded-runner

./: CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug-report-form.yml  config.yml
.github/workflows/: release-please.yml
.hooks/: pre-push
src/: cfg.rs  collect.rs  coverage.rs  defmt.rs  lib.rs  main.rs  path.rs
test_binaries/: emb-runner-test
