[package]
name = "embedded-runner"
description = "Cargo runner for embedded projects using OpenOCD."
repository = "https://github.com/mhatzl/embedded-runner"
license = "MIT"
version = "0.4.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
tera = "1.19.1"
object = "0.35.0"
mantra-schema = { version = "0.6.0" }
mantra-lang-tracing = { version = "0.6.0", default-features = false }
mantra-rust-macros = { version = "0.6.0", features = ["extract"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = { version = "1.0" }
defmt-decoder = { version = "=0.3.10", features = [
    "unstable",
] }
log = { version = "0.4.21", features = ["kv"] }
time = "0.3.36"
defmt-json-schema = "0.1.0"
defmt-parser = { version = "=0.3.4", features = ["unstable"] }
toml = "0.8.12"
tokio = { version = "1.37.0", features = ["full"] }
env_logger = { version = "0.11.3", features = ["unstable-kv"] }
thiserror = "1.0.59"
path-clean = "1.0.1"
path-slash = "0.2.1"
regex = "1.10.4"
